--- a/index.html
+++ b/index.html
@@ -40,36 +40,11 @@
 </head>
 
 <body>
-
-  <!-- Menu -->
-  <nav class="menu" id="theMenu">
-    <div class="menu-wrap">
-      <h1 class="logo"><a href="#home" class="smoothscroll">TOP OF PAGE</a></h1>
-      <i class="fas fa-times menu-close"></i>
-      <a href="#venue" class="smoothscroll">The Venue</a>
-      <a href="#map" class="smoothscroll">Map</a>
-<a href="#hotels"  class="smoothscroll">Hotels</a>
-<a href="https://www.ridgelakegeneva.com/"  target="_blank" rel="noopener noreferrer" float:"right">-    The Ridge</a>
-<a href="https://www.frenchcountryinn.com/" target="_blank" rel="noopener noreferrer">-    French Country Inn</a>
-<a href="https://www.genevanationalresort.com/" target="_blank" rel="noopener noreferrer">  -    Geneva National</a>
-<a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer">  -    Lazy Cloud Inn</a>
-<a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer">  -    Harbor View</a>
-
-
-    </div>
-
-    <!-- Menu button -->
-    <div id="menuToggle"><i class="fas fa-bars"></i></div>
-  </nav>
-
   <section id="home" name="home"></section>
-  <canvas id="screen"></canvas>
+  <canvas height="2080px" id="screen"></canvas>
 <script src="js/index.js"></script>
   <div id="headerwrap">
-
     <div class="container">
-
-
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <h1>Heather<br>and Dan</h1>
@@ -143,8 +118,6 @@ But in the meantime,</h1><br>
   </div>
       <div class="row mt">
         <div class="col-lg-3 service">
-        </div>
-        <div class="col-lg-3 service">
           <i class="fad fa-wine-bottle" style="text-align: center"></i><i class="fad fa-wine-glass-alt" style="text-align: center"></i><br>
           <a href="https://www.frenchcountryinn.com/" target="_blank" rel="noopener noreferrer"><h3>French Country Inn</h3></a>
           <p>Historic Inn on the shores of Lake Como.  All rooms have lake views.</p>
@@ -157,28 +130,18 @@ But in the meantime,</h1><br>
           <p style="text-align: center"><br><a href="https://www.genevanationalresort.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO GENEVA NATIONAL WEBSITE</a></p>
         </div>
         <div class="col-lg-3 service">
+          <i class="fad fa-bed" style="text-align: center"></i><i class="fad fa-clouds"></i><br>
+          <a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer"><h3>Lazy Cloud Inn</h3></a>
+          <p>Just down the road from the Ridge.  All rooms include a private jacuzzi.</p>
+          <p style="text-align: center"><br><a href="https://lazycloud.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO LAZY CLOUD INN WEBSITE</a></p>
         </div>
-      </div>
-<div>
-      <div class="row mt">
         <div class="col-lg-3 service">
-
-</div>
-<div class="col-lg-3 service">
-  <i class="fad fa-bed" style="text-align: center"></i><i class="fad fa-clouds"></i><br>
-  <a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer"><h3>Lazy Cloud Inn</h3></a>
-  <p>Just down the road from the Ridge.  All rooms include a private jacuzzi.</p>
-  <p style="text-align: center"><br><a href="https://lazycloud.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO LAZY CLOUD INN WEBSITE</a></p>
-</div>
-<div class="col-lg-3 service">
-  <i class="fad fa-anchor" style="text-align: center"></i><i class="fad fa-ship"></i><br>
-  <a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer"><h3>Harbor View</h3></a>
-  <p>Private cabins across the highway from the Ridge in William's Bay.</p>
-  <p style="text-align: center"><br><a href="https://lakegenevaharborview.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO HARBOR VIEW WEBSITE</a><br><Br><br><br><br><br></p>
-</div>
-        <div class="col-lg-3 service">
-
+          <i class="fad fa-anchor" style="text-align: center"></i><i class="fad fa-ship"></i><br>
+          <a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer"><h3>Harbor View</h3></a>
+          <p>Private cabins across the highway from the Ridge in William's Bay.</p>
+          <p style="text-align: center"><br><a href="https://lakegenevaharborview.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO HARBOR VIEW WEBSITE</a><br><Br><br><br><br><br></p>
         </div>
+
       </div>
 
     </div>
