--- a/index.html
+++ b/index.html
@@ -41,8 +41,29 @@
 
 <body>
   <section id="home" name="home"></section>
-  <canvas height="2080px" id="screen"></canvas>
+  <canvas id="screen"></canvas>
 <script src="js/index.js"></script>
+<!-- Menu -->
+<nav class="menu" id="theMenu">
+  <div class="menu-wrap">
+    <h1 class="logo"><a href="#home" class="smoothscroll">TOP OF PAGE</a></h1>
+    <i class="fas fa-times menu-close"></i>
+    <a href="#venue" class="smoothscroll">The Venue</a>
+    <a href="#map" class="smoothscroll">Map</a>
+<a href="#hotels"  class="smoothscroll">Hotels</a>
+<a href="https://www.ridgelakegeneva.com/"  target="_blank" rel="noopener noreferrer" float:"right">-    The Ridge</a>
+<a href="https://www.frenchcountryinn.com/" target="_blank" rel="noopener noreferrer">-    French Country Inn</a>
+<a href="https://www.genevanationalresort.com/" target="_blank" rel="noopener noreferrer">  -    Geneva National</a>
+<a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer">  -    Lazy Cloud Inn</a>
+<a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer">  -    Harbor View</a>
+
+
+  </div>
+
+  <!-- Menu button -->
+  <div id="menuToggle"><i class="fas fa-bars"></i></div>
+</nav>
+
   <div id="headerwrap">
     <div class="container">
       <div class="row">
