--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           <h2 style="color:#fff">ARE GETTING MARRIED</h2><br><br>
           <div class="simply-countdown simply-countdown-one"></div>
             <h1>07.04.21</h1>
-            <TABLE ALIGN="CENTER"><TR><TD style="padding:10px"><h3 style="color:#fff">3:00pm<BR>COCKTAILS</h3></TD>
-            <TD style="padding:10px"><h3 style="color:#fff">4:30PM<BR>CEREMONY</h3></TD>
-            <TD style="padding:10px"><h3 style="color:#fff">6:00pm<BR>DINNER</h3></TD></TR></TABLE>
+            <TABLE ALIGN="CENTER"><TR><TD style="padding:10px"><h3 style="color:#fff"><i class="fal fa-cocktail" style="font-size: 30px" "text-align: center"></i><br>3:00pm<BR>COCKTAILS</h3></TD>
+            <TD style="padding:10px"><h3 style="color:#fff"><i class="fal fa-rings-wedding" style="font-size: 30px" "text-align: center"></i><br>4:30PM<BR>CEREMONY</h3></TD>
+            <TD style="padding:10px"><h3 style="color:#fff"><i class="fal fa-utensils" style="font-size: 30px" "text-align: center"></i><br>6:00pm<BR>DINNER</h3></TD></TR></TABLE>
         </div>
       </div>
     </div>
