--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ But in the meantime,</h1><br>
   </div>
   <!-- /aboutwrap -->
 
-  <div class="sep about" data-stellar-background-ratio="0.5"></div>
+  <div class="sep about"></div>
 
   <section id="venue" name="venue"></section>
     <div class="container">
@@ -124,7 +124,7 @@ But in the meantime,</h1><br>
     </div>
   </div>
 
-  <div class="sep portfolio" data-stellar-background-ratio="0.5"></div>
+  <div class="sep portfolio"></div>
 
 
 
