--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
   </div>
 <BR><BR><BR><BR><BR>
 
+  <div class="sep about"></div>
+
+  
   <section id="about" name="about"></section>
   <div id="aboutwrap">
     <div class="container">
