--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <div class="sep about"></div>
 
-  
+
   <section id="about" name="about"></section>
   <div id="aboutwrap">
     <div class="container">
@@ -106,7 +106,7 @@ But in the meantime,</h1><br>
   </div>
   <!-- /aboutwrap -->
 
-  <div class="sep about"></div>
+  <div class="sep aboot"></div>
 
   <section id="venue" name="venue"></section>
     <div class="container">
@@ -197,7 +197,7 @@ But in the meantime,</h1><br>
 
   <div id="copyrights">
     <div class="container">
-      <h5>Created with love for <a href"mailto:heathermahoney92@gmail.com">Heather Mahoney</a> by <a href="mailto:finholt@gmail.com">Dan Finholt</a></h5>
+      <h5>Created with love for <a href="mailto:heathermahoney92@gmail.com">Heather Mahoney</a> by <a href="mailto:finholt@gmail.com">Dan Finholt</a></h5>
       </div>
     </div>
   </div>
