--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
 <!-- Menu -->
 <nav class="menu" id="theMenu">
   <div class="menu-wrap">
-    <h1 class="logo"><a href="#home" class="smoothscroll">TOP OF PAGE</a></h1>
+    <h1 class="logo"><a href="#home" class="smoothscroll">Fireworks</a></h1>
     <i class="fas fa-times menu-close"></i>
     <a href="#venue" class="smoothscroll">The Venue</a>
-    <a href="#map" class="smoothscroll">Map</a>
-<a href="#hotels"  class="smoothscroll">Hotels</a>
 <a href="https://www.ridgelakegeneva.com/"  target="_blank" rel="noopener noreferrer" float:"right">-    The Ridge</a>
+<a href="#hotels"  class="smoothscroll">Other Hotels</a>
 <a href="https://www.frenchcountryinn.com/" target="_blank" rel="noopener noreferrer">-    French Country Inn</a>
 <a href="https://www.genevanationalresort.com/" target="_blank" rel="noopener noreferrer">  -    Geneva National</a>
 <a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer">  -    Lazy Cloud Inn</a>
 <a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer">  -    Harbor View</a>
-
+    <a href="#map" class="smoothscroll">Map of Hotels</a>
 
   </div>
 
@@ -93,10 +92,10 @@
 
         <div class="col-lg-4 name">
 <i class="fad fa-envelope" style="font-size: 50px"></i>
-            <h1>Invitations will be mailed soon</br>
+            <h1>Invitations will be coming soon</br>
 But in the meantime,</h1><br>
-<i class="fad fa-concierge-bell" style="font-size: 50px"></i>
-<h3>BOOK A ROOM</h3>
+<a href="#venue" style="color: black"><i class="fad fa-concierge-bell" style="font-size: 50px"></i>
+<h3>BOOK A ROOM</h3></a>
         </div>
         <div class="col-lg-4 name"></div>
       </div>
@@ -137,34 +136,42 @@ But in the meantime,</h1><br>
     <div class="container">
   <h5 style="text-align: center">HOTEL OPTIONS</h5>
   <h1>Where Else to Stay</h1>
-  </div>
-  </div>
+
       <div class="row mt">
         <div class="col-lg-3 service">
-          <i class="fad fa-wine-bottle" style="text-align: center"></i><i class="fad fa-wine-glass-alt" style="text-align: center"></i><br>
+        </div>
+        <div class="col-lg-3 service">
+          <i class="fad fa-wine-bottle" style="text-align: center"></i><i class="fad fa-wine-glass-alt" style="color: #000000"></i><br>
           <a href="https://www.frenchcountryinn.com/" target="_blank" rel="noopener noreferrer"><h3>French Country Inn</h3></a>
           <p>Historic Inn on the shores of Lake Como.  All rooms have lake views.</p>
-          <p style="text-align: center"><br><a href="https://www.frenchcountryinn.com/"  target="_blank" rel="noopener noreferrer"  style="margin: 0 auto" class="btn btn-default btn-sm">GO TO FRENCH COUNTRY INN WEBSITE</a></p>
+          <p style="text-align: center"><br><a href="https://www.frenchcountryinn.com/"  target="_blank" rel="noopener noreferrer"  style="margin: 0 auto" class="btn btn-default btn-sm">GO TO FRENCH COUNTRY INN WEBSITE</a><br><br><br><br></p>
         </div>
         <div class="col-lg-3 service">
           <i class="fad fa-golf-ball"></i><i class="fad fa-golf-club" style="text-align: center"></i><br>
           <a href="https://www.genevanationalresort.com/" target="_blank" rel="noopener noreferrer"><h3>Geneva National</h3></a>
           <p>A more private option located on a golf course.  Use code <strong>GNWED</strong>.</p>
-          <p style="text-align: center"><br><a href="https://www.genevanationalresort.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO GENEVA NATIONAL WEBSITE</a></p>
+          <p style="text-align: center"><br><a href="https://www.genevanationalresort.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO GENEVA NATIONAL WEBSITE</a><br><br><br><br></p>
+        </div>
+        <div class="col-lg-3 service">
+        </div>
+      </div>
+      <div class+"row mt">
+        <div class="col-lg-3 service">
         </div>
         <div class="col-lg-3 service">
           <i class="fad fa-bed" style="text-align: center"></i><i class="fad fa-clouds"></i><br>
           <a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer"><h3>Lazy Cloud Inn</h3></a>
           <p>Just down the road from the Ridge.  All rooms include a private jacuzzi.</p>
-          <p style="text-align: center"><br><a href="https://lazycloud.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO LAZY CLOUD INN WEBSITE</a></p>
+          <p style="text-align: center"><br><a href="https://lazycloud.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO LAZY CLOUD INN WEBSITE</a><br><br></p>
         </div>
         <div class="col-lg-3 service">
           <i class="fad fa-anchor" style="text-align: center"></i><i class="fad fa-ship"></i><br>
           <a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer"><h3>Harbor View</h3></a>
           <p>Private cabins across the highway from the Ridge in William's Bay.</p>
-          <p style="text-align: center"><br><a href="https://lakegenevaharborview.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO HARBOR VIEW WEBSITE</a><br><Br><br><br><br><br></p>
+          <p style="text-align: center"><br><a href="https://lakegenevaharborview.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO HARBOR VIEW WEBSITE</a><br><Br><br></p>
         </div>
-
+        <div class="col-lg-3 service">
+        </div>
       </div>
 
     </div>
