--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 <BR><BR><BR><BR><BR>
 
-  <div class="sep about"></div>
+  <div class="sep about" data-stellar-background-ratio="0.5"></div>
 
 
   <section id="about" name="about"></section>
@@ -105,7 +105,7 @@ But in the meantime,</h1><br>
   </div>
   <!-- /aboutwrap -->
 
-  <div class="sep aboot"></div>
+  <div class="sep aboot" data-stellar-background-ratio="0.5"></div>
 
   <section id="venue" name="venue"></section>
     <div class="container">
@@ -126,7 +126,7 @@ But in the meantime,</h1><br>
     </div>
   </div>
 
-  <div class="sep portfolio"></div>
+  <div class="sep portfolio" data-stellar-background-ratio="0.5"></div>
 
 
 
