--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ But in the meantime,</h1><br>
           <div class="col-lg-4 proc">
                   <i class="fad fa-rings-wedding" style="font-size: 80px"></i>
 									<p><br>Five minutes west of Downtown Lake Geneva on the shores of Lake Como.</p>
-									<p>Use Code <strong>TRWED</strong> when booking<br></p>
+									<p>Use Promo Code <strong>TRWED</strong> when booking<br></p>
 									<p><BR><a href="https://www.ridgelakegeneva.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO THE RIDGE WEBSITE</a><br></p><br>
 					</div>
           <div class="col-lg-4 proc">
