--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@ But in the meantime,</h1><br>
         <div class="col-lg-3 service">
         </div>
         <div class="col-lg-3 service">
-          <i class="fad fa-wine-bottle" style="text-align: center"></i><i class="fad fa-wine-glass-alt" style="color: #000000"></i><br>
+          <i class="fad fa-wine-bottle" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><i class="fad fa-wine-glass-alt" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><br>
           <a href="https://www.frenchcountryinn.com/" target="_blank" rel="noopener noreferrer"><h3>French Country Inn</h3></a>
           <p>Historic Inn on the shores of Lake Como.  All rooms have lake views.</p>
           <p style="text-align: center"><br><a href="https://www.frenchcountryinn.com/"  target="_blank" rel="noopener noreferrer"  style="margin: 0 auto" class="btn btn-default btn-sm">GO TO FRENCH COUNTRY INN WEBSITE</a><br><br><br><br></p>
         </div>
         <div class="col-lg-3 service">
-          <i class="fad fa-golf-ball"></i><i class="fad fa-golf-club" style="text-align: center"></i><br>
+          <i class="fad fa-golf-ball" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><i class="fad fa-golf-club" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><br>
           <a href="https://www.genevanationalresort.com/" target="_blank" rel="noopener noreferrer"><h3>Geneva National</h3></a>
           <p>A more private option located on a golf course.  Use code <strong>GNWED</strong>.</p>
           <p style="text-align: center"><br><a href="https://www.genevanationalresort.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO GENEVA NATIONAL WEBSITE</a><br><br><br><br></p>
@@ -159,13 +159,13 @@ But in the meantime,</h1><br>
         <div class="col-lg-3 service">
         </div>
         <div class="col-lg-3 service">
-          <i class="fad fa-bed" style="text-align: center"></i><i class="fad fa-clouds"></i><br>
+          <i class="fad fa-bed" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><i class="fad fa-clouds" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><br>
           <a href="https://lazycloud.com/" target="_blank" rel="noopener noreferrer"><h3>Lazy Cloud Inn</h3></a>
           <p>Just down the road from the Ridge.  All rooms include a private jacuzzi.</p>
           <p style="text-align: center"><br><a href="https://lazycloud.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO LAZY CLOUD INN WEBSITE</a><br><br></p>
         </div>
         <div class="col-lg-3 service">
-          <i class="fad fa-anchor" style="text-align: center"></i><i class="fad fa-ship"></i><br>
+          <i class="fad fa-anchor" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><i class="fad fa-ship" style="--fa-primary-color: black; --fa-secondary-color: #0080ff;"></i><br>
           <a href="https://lakegenevaharborview.com/" target="_blank" rel="noopener noreferrer"><h3>Harbor View</h3></a>
           <p>Private cabins across the highway from the Ridge in William's Bay.</p>
           <p style="text-align: center"><br><a href="https://lakegenevaharborview.com/"  target="_blank" rel="noopener noreferrer" class="btn btn-default btn-sm">GO TO HARBOR VIEW WEBSITE</a><br><Br><br></p>
