--- a/rsvp.html
+++ b/rsvp.html
@@ -5,7 +5,7 @@
 
 HERE WE GO
 
-<script type="text/javascript" src="https://heatherdan.rsvpify.com/embed"></script>
+<script type="text/javascript" src="https://finholtmahoneywedding.rsvpify.com/embed"></script>
 
 
 </body>
