--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <TABLE ALIGN="CENTER"><TR><TD style="padding:10px"><h3 style="color:#fff"><i class="fal fa-cocktail" style="font-size: 30px" "text-align: center"></i><br>3:00pm<BR>COCKTAILS</h3></TD>
             <TD style="padding:10px"><h3 style="color:#fff"><i class="fal fa-rings-wedding" style="font-size: 30px" "text-align: center"></i><br>4:30pm<BR>CEREMONY</h3></TD>
             <TD style="padding:10px"><h3 style="color:#fff"><i class="fal fa-utensils" style="font-size: 30px" "text-align: center"></i><br>6:00pm<BR>DINNER</h3></TD></TR></TABLE>
+        <h2><button color="white"><a href="https://finholtmahoneywedding.rsvpify.com/" color="#000" style="text-decoration: none" >RSVP HERE</a></button></h2>
         </div>
       </div>
     </div>
