--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
         <div class="col-lg-4 name">
 <i class="fad fa-envelope" style="font-size: 50px"></i>
-            <h1>Invitations will be coming soon</br>
-But in the meantime,</h1><br>
-<a href="#venue" style="color: black"><i class="fad fa-concierge-bell" style="font-size: 50px"></i>
-<h3>BOOK A ROOM</h3></a>
+            <h1>Invitations have now gone out,</br>
+Coming or not, give us a shout!</h1><br>
+<a href="https://finholtmahoneywedding.rsvpify.com/" style="color: black"><i class="fad fa-comment-alt-dots" style="font-size: 50px"></i>
+<h3>RSVP NOW</h3></a>
         </div>
         <div class="col-lg-4 name"></div>
       </div>
